# cpp-lab09

./: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
logs/: log.txt
src/: Application.cpp  Application.h  NodeStack.h  StackOnArray.h  StackOnList.h
tests/: ApplicationTests.cpp  CMakeLists.txt  StackOnArrayTests.cpp  StackOnListTests.cpp
